--- a/.github/workflows/crypto.yml
+++ b/.github/workflows/crypto.yml
@@ -9,6 +9,11 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@master
+
+      # Add the fix to mark /github/workspace as a safe directory
+      - name: Mark /github/workspace as safe
+        run: git config --global --add safe.directory /github/workspace
+
       - name: WordPress Plugin Deploy
         uses: 10up/action-wordpress-plugin-deploy@master
         env:
